fix: endpoint 커스터마이징 삭제